<?xml version="1.0"?>
<package>
  <name>imover_msgs</name>
  <version>0.0.1</version>
  <description>iMover messages, services and actions</description>
  <author email="gary@ekumenlabs.com">Gary Servin</author>
  <maintainer email="gary@ekumenlabs.com">Gary Servin</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>uuid_msgs</run_depend>

  <export>
  </export>
</package>
